# cli-dice

./: Cargo.toml
src/: dice.rs  main.rs
