[package]
name = "cli-dice"
version = "0.1.0"
authors = ["Evan Johnson <evanj2357@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.33.3"
nom = "^6.0.1"
rusty-dice = { git = "https://github.com/evanj2357/rusty-dice", branch = "main" }